--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
             color: #e0e0e0;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .container {
             max-width: 800px;
@@ -19,6 +22,7 @@
             background-color: #1f1f1f;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            flex-grow: 1;
         }
         h1 {
             text-align: center;
@@ -79,6 +83,17 @@
             color: #bbb;
             text-align: center;
         }
+        .footer {
+            font-size: 12px;
+            color: #bbb;
+            text-align: center;
+            margin-top: auto;
+            padding: 10px;
+        }
+        .footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -96,6 +111,11 @@
     
     <div class="result" id="result"></div>
     <div class="error" id="error"></div>
+</div>
+
+<div class="footer">
+    <p>Desenvolvido por Murilo Scolari</p>
+    <p><a href="https://github.com/Revocable" target="_blank">GitHub</a></p>
 </div>
 
 <script>
